8336726: C2: assert(!do_asserts || projs->fallthrough_ioproj != nullptr) failed: must be found

Reviewed-by: chagedorn, kvn, vlivanov